--- a/locales/lv.json
+++ b/locales/lv.json
@@ -1,44 +1,44 @@
 {
-	"overall_checkup_intro": "Mūsu vispārējais apskates pakalpojums ir paredzēts, lai jūsu transportlīdzeklis darbotos vienmērīgi un droši. ",
+	"overall_checkup_intro": "Mūsu vispārējās pārbaudes pakalpojums ir izstrādāts, lai jūsu transportlīdzeklis darbotos nevainojami un droši. Tas nav tikai par to, lai pārbaudītu sarakstu - tas ir par to, lai jūs būtu mierīgs uz ceļa. Mūsu speciālisti tehniķi veic detalizētu jūsu automobiļa pārbaudi, lai identificētu iespējamās problēmas, pirms tās kļūst par dārgu remontu. Mēs novērtējam visus svarīgākos jūsu transportlīdzekļa aspektus, tostarp dzinēju, drošības sistēmas, riepas un šķidrumu līmeni. Šis pakalpojums ir lieliski piemērots regulārai apkopei vai pirms gariem braucieniem, lai nodrošinātu, ka jūsu automašīna ir vislabākajā stāvoklī. Uzticieties, ka mēs sniegsim rūpīgu novērtējumu un ieteikumus, lai jūsu automašīna būtu droša un darbotos pēc iespējas labāk.",
 	"overall_checkup_engine_title": "Dzinēja veselības pārbaude",
-	"overall_checkup_engine_description": "Dzinējs ir jūsu automašīnas sirds, un mēs nodrošinām, ka tas paliek vislabākajā stāvoklī. ",
+	"overall_checkup_engine_description": "Dzinējs ir jūsu automobiļa sirds, un mēs nodrošinām, lai tas būtu vislabākajā stāvoklī. Mūsu dzinēja veselības pārbaude ietver tādu komponentu pārbaudi kā aizdedzes sveces, siksnas, filtri un šķidruma līmenis. Mēs meklējam jebkādas nolietojuma vai iespējamas bojājuma pazīmes, piedāvājot tūlītēju labošanu vai profilaktiskus pasākumus. Neatkarīgi no tā, vai jūsu automašīna jūtas gausa vai jūs vienkārši vēlaties saglabāt tās jaudu, šī pārbaude ir būtiska ilgtermiņa veiktspējas un efektivitātes nodrošināšanai.",
 	"overall_checkup_safety_title": "Drošības sistēmu pārbaude",
-	"overall_checkup_safety_description": "Jūsu drošība ir mūsu prioritāte. ",
-	"overall_checkup_tires_title": "Riepu novērtēšana",
-	"overall_checkup_tires_description": "Pareiza riepu apkope ir ļoti svarīga drošībai un degvielas patēriņa efektivitātei. ",
-	"car_painting_intro": "Jūsu automašīnas ārpuse daudz pasaka par tās īpašnieku, un mūsu automašīnu krāsošanas pakalpojums palīdz jums izveidot perfektu paziņojumu. ",
-	"car_painting_materials_title": "Premium krāsas",
-	"car_painting_materials_description": "Mēs izmantojam tikai labākos materiālus nozarē, lai nodrošinātu izturību un nevainojamu apdari. ",
-	"car_painting_customization_title": "Pielāgošanas opcijas",
-	"car_painting_customization_description": "Izsakiet sevi ar pielāgotiem krāsošanas darbiem, kas atspoguļo jūsu unikālo stilu. ",
+	"overall_checkup_safety_description": "Jūsu drošība ir mūsu prioritāte. Mēs rūpīgi pārbaudām svarīgākās drošības sistēmas, tostarp bremzes, drošības spilvenus, drošības jostas un elektronisko stabilitātes kontroli. Mūsu tehniķi nodrošina, ka visas šīs funkcijas darbojas pareizi, tādējādi samazinot negadījumu risku. Agri konstatējot iespējamās problēmas, jūs varat droši braukt, zinot, ka jūsu transportlīdzeklis ir maksimāli drošs.",
+	"overall_checkup_tires_title": "Riepu novērtējums",
+	"overall_checkup_tires_description": "Pareiza riepu apkope ir ļoti svarīga drošībai un degvielas ekonomijai. Mēs pārbaudīsim jūsu riepu nodilumu, protektora dziļumu un pareizu regulējumu. Turklāt mēs pārbaudām, vai nav caurumu, noplūžu vai citu bojājumu. Pareiza riepu kopšana var uzlabot jūsu automobiļa vadāmību, samazināt bremzēšanas ceļu un pat ietaupīt naudu uz degvielas rēķina.",
+	"car_painting_intro": "Jūsu automašīnas ārējais izskats daudz pasaka par tās īpašnieku, un mūsu automobiļu krāsošanas pakalpojumi palīdzēs jums sniegt perfektu paziņojumu. Neatkarīgi no tā, vai vēlaties atjaunot veca transportlīdzekļa spīdumu vai personalizēt to ar unikālu krāsu, mūsu profesionālie krāsošanas pakalpojumi ir pielāgoti jūsu vajadzībām. Mēs izmantojam augstas kvalitātes krāsas un apdares materiālus, lai nodrošinātu ilgnoturīgu un spilgtu izskatu. Mūsu komanda veic visus darbus, sākot no nelieliem pieskārieniem un beidzot ar pilnīgu pārkrāsošanu, nodrošinot precizitāti un rūpību katrā darbā. Svaiga krāsas kārta ne tikai uzlabo estētiku, bet arī pasargā jūsu automobili no vides bojājumiem, rūsas un nolietojuma.",
+	"car_painting_materials_title": "Premium klases krāsas",
+	"car_painting_materials_description": "Mēs izmantojam tikai labākos nozares materiālus, lai nodrošinātu izturību un nevainojamu apdari. Mūsu krāsas ir izturīgas pret UV stariem, skrāpējumiem un izbalēšanu, saglabājot jūsu automašīnas izskatu gadiem ilgi. Neatkarīgi no tā, vai jums nepieciešama spīdīga, matēta vai metāliska apdare, mēs esam parūpējušies par jums.",
+	"car_painting_customization_title": "Pielāgošanas iespējas",
+	"car_painting_customization_description": "Izteiksiet sevi ar pielāgotiem krāsojuma darbiem, kas atspoguļo jūsu unikālo stilu. Mūsu speciālisti realizēs jūsu redzējumu, sākot no drosmīgām krāsu izvēlēm līdz sarežģītiem rakstiem un dizainiem. Mēs cieši sadarbojamies ar jums, lai rezultāts pārsniegtu jūsu cerības.",
 	"car_painting_protection_title": "Izturīgi pārklājumi",
-	"car_painting_protection_description": "Aizsargājiet savu ieguldījumu ar mūsu izturīgajiem pārklājumiem. ",
-	"rust_removal_intro": "Rūsa var ievērojami pasliktināt jūsu automašīnas izskatu un struktūras integritāti. ",
+	"car_painting_protection_description": "Aizsargājiet savus ieguldījumus ar mūsu izturīgajiem pārklājumiem. Šie progresīvie risinājumi aizsargā pret skrāpējumiem, šķembām un tādiem vides faktoriem kā skābs lietus un spēcīgi saules stari. Jūsu automašīna ne tikai lieliski izskatīsies, bet arī būs aizsargāta ilgtermiņā.",
+	"rust_removal_intro": "Rūsas var ievērojami pasliktināt jūsu automobiļa izskatu un strukturālo integritāti. Mūsu rūsas noņemšanas pakalpojums ir risinājums, lai apturētu rūsas veidošanos un novērstu turpmākus bojājumus. Izmantojot progresīvas metodes un instrumentus, mēs rūpīgi noņemam rūsu no skartajām vietām, nekaitējot sākotnējai struktūrai. Pēc noņemšanas mēs uzklājam aizsargpārklājumus, lai nepieļautu rūsas atgriešanos. Šis pakalpojums ne tikai atjauno jūsu automobiļa estētiku, bet arī uzlabo tā tālākpārdošanas vērtību un pagarina tā kalpošanas laiku. Uzticieties mums, lai atgrieztu jūsu transportlīdzeklim dzīvību bez rūsas un korozijas.",
 	"rust_removal_process_title": "Efektīvs rūsas noņemšanas process",
-	"rust_removal_process_description": "Mēs izmantojam specializētu aprīkojumu un metodes, lai rūpīgi noņemtu rūsu no jūsu automašīnas. ",
+	"rust_removal_process_description": "Mēs izmantojam specializētu aprīkojumu un metodes, lai rūpīgi noņemtu rūsu no jūsu automašīnas. Mūsu process ietver slīpēšanu, ķīmisko apstrādi un aizsarggruntskrāsas uzklāšanu, lai nodrošinātu, ka tiek likvidēts katrs rūsas centimetrs.",
 	"rust_removal_protection_title": "Rūsas novēršana",
-	"rust_removal_protection_description": "Pēc rūsas noņemšanas mēs uzklājam augstas kvalitātes aizsargpārklājumus, lai novērstu koroziju nākotnē. ",
+	"rust_removal_protection_description": "Pēc rūsas noņemšanas mēs uzklājam augstas kvalitātes aizsargpārklājumus, lai novērstu turpmāku koroziju. Šie pārklājumi veido barjeru starp jūsu automobili un apkārtējās vides faktoriem, saglabājot to bez rūsas gadiem ilgi.",
 	"rust_removal_benefits_title": "Rūsas noņemšanas priekšrocības",
-	"rust_removal_benefits_description": "Rūsas noņemšana uzlabo jūsu automašīnas izskatu, uzlabo drošību un palielina tās ilgmūžību. ",
-	"tuning_intro": "Automašīnas regulēšana nav saistīta tikai ar ātrumu; ",
+	"rust_removal_benefits_description": "Rūsas noņemšana uzlabo jūsu automobiļa izskatu, uzlabo drošību un pagarina tā kalpošanas ilgumu. Risinot rūsas problēmas agrīnā stadijā, jūs ietaupāt naudu, kas vēlāk būs nepieciešama apjomīgākiem remontdarbiem.",
+	"tuning_intro": "Automašīnas tūninga mērķis nav tikai ātrums, bet arī veiktspējas optimizēšana atbilstoši jūsu īpašajām vajadzībām. Mūsu tūninga pakalpojumi ļauj jums pilnībā atraisīt sava automobiļa potenciālu. Neatkarīgi no tā, vai meklējat labāku degvielas patēriņa efektivitāti, labāku vadāmību vai lielāku jaudu, mūsu speciālisti pielāgos tūninga procesu jūsu mērķiem. Izmantojot mūsdienīgas iekārtas, mēs pielāgojam dzinēja, balstiekārtas un citus iestatījumus. Mūsu mērķis ir radīt vienmērīgāku, ātrāku un efektīvāku braukšanas pieredzi.",
 	"tuning_performance_title": "Palieliniet veiktspēju",
-	"tuning_performance_description": "Mūsu regulēšanas pakalpojumi uzlabo jūsu automašīnas zirgspēkus, griezes momentu un paātrinājumu. ",
-	"tuning_customization_title": "Personalizēta skaņošana",
-	"tuning_customization_description": "Katram autovadītājam ir unikālas izvēles. ",
-	"tuning_efficiency_title": "Degvielas efektivitāte",
-	"tuning_efficiency_description": "Ietaupiet naudu, izmantojot sūkni, izmantojot mūsu uz efektivitāti vērsto regulēšanu. ",
-	"custom_part_insertion_intro": "Automašīnas pielāgošana ir labākais veids, kā padarīt to par savu. ",
+	"tuning_performance_description": "Mūsu tūninga pakalpojumi uzlabo jūsu automobiļa jaudu, griezes momentu un paātrinājumu. Mēs optimizējam dzinēja parametrus, lai nodrošinātu maksimālu jaudu, nemazinot uzticamību.",
+	"tuning_customization_title": "Personalizēts tunings",
+	"tuning_customization_description": "Katram autovadītājam ir unikālas vēlmes. Mēs pielāgojam tūninga iestatījumus, lai tie atbilstu jūsu braukšanas stilam, neatkarīgi no tā, vai braucat pa pilsētu, veicat garus izbraucienus vai piedalāties augstas veiktspējas sacīkstēs.",
+	"tuning_efficiency_title": "Degvielas patēriņa efektivitāte",
+	"tuning_efficiency_description": "Ietaupiet naudu degvielas uzpildes stacijās, izmantojot mūsu uz efektivitāti vērsto tūningu. Veicot precīzu automašīnas sistēmu regulēšanu, mēs palīdzēsim jums panākt lielāku degvielas ekonomiju, vienlaikus saglabājot veiktspēju.",
+	"custom_part_insertion_intro": "Pielāgot savu automobili ir labākais veids, kā padarīt to patiesi savu. Mūsu pielāgotu detaļu ievietošanas pakalpojums piedāvā neierobežotas iespējas uzlabot jūsu automobiļa funkcionalitāti, estētiku un veiktspēju. Neatkarīgi no tā, vai vēlaties uzstādīt jaunas audio sistēmas, veiktspējas izpūtējus vai speciālu interjeru, mums ir pieredze, lai to visu paveiktu. Mēs nodrošinām, ka katra detaļa tiek uzstādīta perfekti, nevainojami iekļaujoties jūsu automašīnā un iegūstot izsmalcinātu apdari. Modernizējiet savu automobili jau šodien ar augstas kvalitātes pielāgotām detaļām, kas pielāgotas jūsu vajadzībām.",
 	"custom_part_insertion_high_quality_title": "Augstākā kvalitāte",
-	"custom_part_insertion_high_quality_description": "Mēs iepērkam detaļas no uzticamiem ražotājiem, lai garantētu izturību un uzticamību. ",
+	"custom_part_insertion_high_quality_description": "Mēs iegādājamies detaļas no uzticamiem ražotājiem, lai garantētu izturību un uzticamību. Katra detaļa ir izgatavota tā, lai izturētu ikdienas nolietojumu, un piedāvā ilgtermiņa vērtību.",
 	"custom_part_insertion_performance_title": "Uzlabota veiktspēja",
-	"custom_part_insertion_performance_description": "No ātruma palielināšanas līdz efektivitātes palielināšanai mūsu pielāgotās detaļas uzlabo jūsu automašīnas vispārējo veiktspēju, padarot katru braucienu patīkamāku.",
-	"custom_part_insertion_customizable_title": "Pilnībā pielāgojams",
-	"custom_part_insertion_customizable_description": "Izstrādājiet savu sapņu automašīnu ar detaļām, kas pielāgotas jūsu īpašajām vēlmēm. ",
-	"overall_checkup_description": "Veicot pārbaudi, pārliecinieties, ka jūsu transportlīdzeklis ir labā stāvoklī.",
-	"car_painting_description": "Piešķiriet savai automašīnai jaunu izskatu ar profesionāliem krāsošanas pakalpojumiem.",
-	"rust_removal_description": "Noņemiet rūsu un pasargājiet savu automašīnu labākai izturībai.",
-	"tuning_description": "Optimizējiet savas automašīnas veiktspēju, izmantojot mūsu tūninga pakalpojumu.",
-	"custom_part_insertion_description": "Uzlabojiet savu automašīnu ar pielāgotām detaļām, kas pielāgotas jūsu vajadzībām.",
+	"custom_part_insertion_performance_description": "No ātruma palielināšanas līdz efektivitātes palielināšanai - mūsu pielāgotās detaļas uzlabo jūsu automobiļa vispārējo veiktspēju, padarot katru braucienu patīkamāku.",
+	"custom_part_insertion_customizable_title": "Pilnībā pielāgojama",
+	"custom_part_insertion_customizable_description": "Izveidojiet savu sapņu automobili ar detaļām, kas pielāgotas jūsu īpašajām vēlmēm. Neatkarīgi no tā, vai tas ir grezns interjers vai uzlabotas tehnoloģiju funkcijas, mēs to nodrošināsim.",
+	"overall_checkup_description": "Pārbaudiet, vai jūsu transportlīdzeklis ir labākajā stāvoklī.",
+	"car_painting_description": "Piešķiriet savam automobilim svaigu izskatu, izmantojot profesionālus krāsošanas pakalpojumus.",
+	"rust_removal_description": "Noņemiet rūsu un aizsargājiet savu automobili, lai nodrošinātu labāku izturību.",
+	"tuning_description": "Optimizējiet sava automobiļa veiktspēju ar mūsu tūninga pakalpojumiem.",
+	"custom_part_insertion_description": "Uzlabojiet savu automobili ar jūsu vajadzībām pielāgotām detaļām.",
 	"Toggle navigation": "Pārslēgt navigāciju",
 	"Services": "Pakalpojumi",
 	"About us": "Par mums",
@@ -270,12 +270,12 @@
 	"User": "Lietotājs",
 	"Project": "Projekts",
 	"Start": "Sākt",
-	"No arrival": "Nav ierašanās",
+	"No arrival": "Neieradās",
 	"Finish": "Pabeigt",
 	"Completed": "Pabeigts",
 	"In Progress": "Notiek",
 	"Pending": "Gaida",
-	"No Arrival": "Nav ierašanās",
+	"No Arrival": "Neieradās",
 	"Cancelled": "Atcelts",
 	"Language": "Valoda",
 	"To be finished today": "Pabeigt šodien",
@@ -469,46 +469,52 @@
 	"additional_info_placeholder": "Ievadiet jebkādu papildu informāciju par savu automašīnu vai remontu.",
 	"car_repair_description": "Mūsu automašīnu remonta serviss nodrošina, ka jūsu automašīna saņems tai nepieciešamo profesionālu aprūpi. ",
 	"pricing_description": "Mēs ticam pārredzamām un konkurētspējīgām cenām, lai nodrošinātu, ka jūs saņemat vislabāko naudas vērtību. ",
-	"Password reset link sent": "Password reset link sent",
-	"Reset Password": "Reset Password",
-	"Enter your email": "Enter your email",
-	"Invalid email address": "Invalid email address",
-	"Send Reset Link": "Send Reset Link",
-	"Admin Panel": "Admin Panel",
-	"Filter": "Filter",
-	"All": "All",
-	"Active": "Active",
-	"With Projects": "With Projects",
-	"Admins": "Admins",
-	"Workers": "Workers",
-	"Search by ID, Email, or Project ID": "Search by ID, Email, or Project ID",
-	"Add Worker": "Add Worker",
-	"All Projects": "All Projects",
-	"Delayed": "Delayed",
-	"Finished": "Finished",
-	"Search by Project ID, User ID, Status": "Search by Project ID, User ID, Status",
-	"Projects by Date": "Projects by Date",
-	"Started on this day": "Started on this day",
-	"Finished on this day": "Finished on this day",
-	"Search by Date": "Search by Date",
-	"Search by Project ID, User ID, Username, Status": "Search by Project ID, User ID, Username, Status",
-	"View All Users": "View All Users",
-	"Filter: All Users": "Filter: All Users",
-	"Active Users": "Active Users",
-	"Users With Projects": "Users With Projects",
-	"Search Users": "Search Users",
-	"View All Projects": "View All Projects",
-	"Filter: All Projects": "Filter: All Projects",
-	"Search by Project ID, User ID, Username, or Status": "Search by Project ID, User ID, Username, or Status",
-	"Search Projects": "Search Projects",
-	"Search by ID, Email, or ProjectID": "Search by ID, Email, or ProjectID",
-	"Search by Email, ID or ProjectID": "Search by Email, ID or ProjectID",
-	"Search by ID, Username, or Info": "Search by ID, Username, or Info",
-	"Completed Projects": "Completed Projects",
-	"Pending Projects": "Pending Projects",
-	"Cancelled Projects": "Cancelled Projects",
-	"Successfully removed administrator permissions": "Successfully removed administrator permissions",
-	"Remove Worker": "Remove Worker",
-	"Reason for removal": "Reason for removal",
-	"Remove worker": "Remove worker"
+	"Password reset link sent": "Paroles maiņas saite nosūtīta",
+	"Reset Password": "Mainīt paroli",
+	"Enter your email": "Ievadiet savu e-pastu",
+	"Invalid email address": "E-pasta adrese nav derīga",
+	"Send Reset Link": "Sūtīt paroles maiņas saiti",
+	"Admin Panel": "Administratīvais panelis",
+	"Filter": "Filtri",
+	"All": "Visi",
+	"Active": "Aktīvie",
+	"With Projects": "Ar projektiem",
+	"Admins": "Administratori",
+	"Workers": "Darbinieki",
+	"Add Worker": "Pievienot darbinieku",
+	"All Projects": "Visi projekti",
+	"Delayed": "Kavētie",
+	"Finished": "Pabeigtie",
+	"Projects by Date": "Projekts pēc datuma",
+	"Started on this day": "Sākts šajā dienā",
+	"Finished on this day": "Pabeigts šajā dienā",
+	"Search by Date": "Mekltēt pēc datuma",
+	"View All Users": "Apskatīt visus lietotājus",
+	"Filter: All Users": "Filtrs: Visi lietotāji",
+	"Active Users": "Aktīvie lietotāji",
+	"Users With Projects": "Lietotāji ar projektiem",
+	"Search Users": "Meklēt lietotāju",
+	"View All Projects": "Apskatīt visus projektus",
+	"Filter: All Projects": "Filrts: Visi projekti",
+	"Search Projects": "Meklēt projektus",
+	"Search by ID, Username, or Info": "Meklēt pēc ID, lietotājvārda vai informācijas",
+	"Completed Projects": "Pabeigtie projekti",
+	"Pending Projects": "Gaidāmie projekti",
+	"Cancelled Projects": "Atceltie projekti",
+	"Successfully removed administrator permissions": "Veiksmīgi noņēma administratora atļaujas",
+	"Remove Worker": "Noņemt darbinieku",
+	"Reason for removal": "Noņemšanas iemesls",
+	"Remove worker": "Noņemt darbinieku",
+	"Search by Email or ID": "Meklēt pēc ID vai e-pasta",
+	"Overall Status": "Vispārīgais statuss",
+	"Project has been cancelled": "Projekts tika atcelts",
+	"(Click to cancel)": "(Spiediet, lai atceltu projektu)",
+	"Project is finished": "Projekts ir pabeigts",
+	"Project statistics by type": "Projektu statistika pēc tipa",
+	"Project statistics by status": "Projektu statistika pēc statusiem",
+	"Project count per user": "Projektu skaits pa lietotājiem",
+	"Delayed projects": "Kavētie projekti",
+	"No projects found.": "Netika atrasts neviens projekts.",
+	"Forgot password?": "Aizmirsāt paroli?",
+	"Create an account instead?": "Izveidot jaunu kontu?"
 }
