--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,39 +1,39 @@
 {
-	"overall_checkup_intro": "Наша комплексная служба технического осмотра предназначена для обеспечения бесперебойной и безопасной работы вашего автомобиля. ",
-	"overall_checkup_engine_title": "Проверка работоспособности двигателя",
-	"overall_checkup_engine_description": "Двигатель — это сердце вашего автомобиля, и мы гарантируем, что он останется в отличном состоянии. ",
+	"overall_checkup_intro": "Наш комплексный технический осмотр призван обеспечить бесперебойную и безопасную работу вашего автомобиля. Это не просто проверка по списку - это спокойствие на дороге. Наши эксперты-техники проводят детальный осмотр вашего автомобиля, чтобы выявить потенциальные проблемы до того, как они превратятся в дорогостоящий ремонт. Мы оцениваем каждый критический аспект вашего автомобиля, включая двигатель, системы безопасности, шины и уровни жидкостей. Эта услуга идеально подходит для планового технического обслуживания или перед длительными поездками, чтобы убедиться, что ваш автомобиль находится в идеальном состоянии. Доверьтесь нам, мы проведем тщательную оценку и дадим рекомендации, чтобы вы были в безопасности, а ваш автомобиль работал как можно лучше.",
+	"overall_checkup_engine_title": "Проверка состояния двигателя",
+	"overall_checkup_engine_description": "Двигатель - это сердце вашего автомобиля, и мы следим за тем, чтобы он оставался в идеальном состоянии. Наша проверка состояния двигателя включает в себя осмотр таких компонентов, как свечи зажигания, ремни, фильтры и уровень жидкостей. Мы ищем любые признаки износа или потенциальной неисправности, предлагая немедленное устранение неполадок или профилактические меры. Если ваш автомобиль чувствует себя вялым или вы просто хотите сохранить его мощность, эта проверка необходима для долгосрочной работы и эффективности.",
 	"overall_checkup_safety_title": "Проверка систем безопасности",
-	"overall_checkup_safety_description": "Ваша безопасность – наш приоритет. ",
-	"overall_checkup_tires_title": "Оценка шин",
-	"overall_checkup_tires_description": "Правильное обслуживание шин имеет решающее значение для безопасности и топливной экономичности. ",
-	"car_painting_intro": "Внешний вид вашего автомобиля многое говорит о его владельце, и наша услуга по покраске автомобиля поможет вам заявить о себе идеально. ",
-	"car_painting_materials_title": "Премиальные краски",
-	"car_painting_materials_description": "Мы используем только лучшие материалы в отрасли, чтобы обеспечить долговечность и безупречную отделку. ",
-	"car_painting_customization_title": "Параметры настройки",
-	"car_painting_customization_description": "Выразите себя с помощью индивидуальной окраски, отражающей ваш уникальный стиль. ",
-	"car_painting_protection_title": "Прочные покрытия",
-	"car_painting_protection_description": "Защитите свои инвестиции с помощью наших долговечных покрытий. ",
-	"rust_removal_intro": "Ржавчина может значительно ухудшить внешний вид и структурную целостность вашего автомобиля. ",
+	"overall_checkup_safety_description": "Ваша безопасность - наш приоритет. Мы тщательно проверяем важнейшие системы безопасности, включая тормоза, подушки безопасности, ремни безопасности и электронные системы контроля устойчивости. Наши техники следят за тем, чтобы все эти функции работали правильно, снижая риск аварий. Выявив потенциальные проблемы на ранней стадии, вы сможете ездить с уверенностью, зная, что ваш автомобиль находится в максимальной безопасности.",
+	"overall_checkup_tires_title": "Оценка состояния шин",
+	"overall_checkup_tires_description": "Правильное обслуживание шин имеет решающее значение для безопасности и топливной эффективности. Мы проверим ваши шины на предмет износа, глубины протектора и правильной центровки. Кроме того, мы проверяем шины на наличие проколов, утечек или других повреждений. Правильный уход за шинами может улучшить управляемость вашего автомобиля, сократить тормозной путь и даже сэкономить деньги на топливе.",
+	"car_painting_intro": "Внешний вид вашего автомобиля многое говорит о его владельце, и наши услуги по покраске автомобилей помогут вам сделать идеальное заявление. Если вы хотите восстановить блеск старого автомобиля или придать ему индивидуальность с помощью уникального цвета, наши профессиональные услуги по покраске будут соответствовать вашим потребностям. Мы используем высококачественные краски и финишные покрытия, чтобы обеспечить долговечный и яркий внешний вид. Наша команда выполняет любые работы - от мелких штрихов до полного ремонта, обеспечивая точность и тщательность в каждой работе. Свежий слой краски не только улучшает эстетику, но и защищает ваш автомобиль от вредного воздействия окружающей среды, ржавчины и износа.",
+	"car_painting_materials_title": "Краски премиум-класса",
+	"car_painting_materials_description": "Мы используем только лучшие материалы в отрасли, чтобы обеспечить долговечность и безупречную отделку. Наши краски устойчивы к ультрафиолетовым лучам, царапинам и выцветанию, сохраняя внешний вид вашего автомобиля на долгие годы. Нужна ли вам глянцевая, матовая или металлическая отделка, мы все предусмотрели.",
+	"car_painting_customization_title": "Варианты персонализации",
+	"car_painting_customization_description": "Выразите себя с помощью индивидуальной покраски, которая отражает ваш уникальный стиль. От смелых цветовых решений до замысловатых узоров и рисунков - наши специалисты воплотят ваше видение в жизнь. Мы работаем в тесном сотрудничестве с вами, чтобы результат превзошел ваши ожидания.",
+	"car_painting_protection_title": "Долговечные покрытия",
+	"car_painting_protection_description": "Защитите свои инвестиции с помощью наших долговечных покрытий. Эти передовые решения защищают от царапин, сколов и воздействия таких факторов окружающей среды, как кислотные дожди и жесткий солнечный свет. Ваш автомобиль будет не только отлично выглядеть, но и останется защищенным надолго.",
+	"rust_removal_intro": "Ржавчина может значительно ухудшить внешний вид и структурную целостность вашего автомобиля. Наша услуга по удалению ржавчины - это решение, которое поможет остановить ржавчину на пути и предотвратить дальнейшее повреждение. Используя передовые методы и инструменты, мы аккуратно удаляем ржавчину с пораженных участков, не нарушая первоначальной структуры. После удаления мы наносим защитные покрытия, чтобы предотвратить повторное появление ржавчины. Эта услуга не только восстанавливает эстетический вид вашего автомобиля, но и повышает его стоимость при перепродаже и продлевает срок службы. Доверьтесь нам, чтобы вернуть вашему автомобилю жизнь, избавив его от ржавчины и коррозии.",
 	"rust_removal_process_title": "Эффективный процесс удаления ржавчины",
-	"rust_removal_process_description": "Мы используем специализированное оборудование и методы для тщательного удаления ржавчины с вашего автомобиля. ",
-	"rust_removal_protection_title": "Предотвращение ржавчины",
-	"rust_removal_protection_description": "После удаления ржавчины мы наносим качественные защитные покрытия для предотвращения коррозии в будущем. ",
+	"rust_removal_process_description": "Мы используем специализированное оборудование и методы для тщательного удаления ржавчины с вашего автомобиля. Наш процесс включает в себя шлифовку, химическую обработку и нанесение защитной грунтовки, чтобы гарантировать, что каждый сантиметр ржавчины будет устранен.",
+	"rust_removal_protection_title": "Профилактика ржавчины",
+	"rust_removal_protection_description": "После удаления ржавчины мы наносим высококачественные защитные покрытия, чтобы предотвратить будущую коррозию. Эти покрытия создают барьер между вашим автомобилем и факторами окружающей среды, сохраняя его без ржавчины на долгие годы. ",
 	"rust_removal_benefits_title": "Преимущества удаления ржавчины",
-	"rust_removal_benefits_description": "Удаление ржавчины улучшит внешний вид вашего автомобиля, повысит безопасность и продлит его срок службы. ",
-	"tuning_intro": "Тюнинг вашего автомобиля – это не только скорость; ",
+	"rust_removal_benefits_description": "Удаление ржавчины улучшает внешний вид вашего автомобиля, повышает безопасность и увеличивает его долговечность. Решая проблемы с ржавчиной на ранней стадии, вы экономите деньги на более масштабном ремонте в дальнейшем. ",
+	"tuning_intro": "Настройка вашего автомобиля — это не только скорость; это оптимизация производительности для ваших конкретных потребностей. Наши услуги по настройке позволяют вам раскрыть весь потенциал вашего автомобиля. Независимо от того, ищете ли вы лучшую топливную экономичность, улучшенную управляемость или повышенную мощность, наши специалисты адаптируют процесс настройки к вашим целям Используя современное оборудование, мы настраиваем параметры двигателя, подвески и многое другое. Мы стремимся создать более плавный, быстрый и эффективный опыт вождения; ",
 	"tuning_performance_title": "Повышение производительности",
-	"tuning_performance_description": "Наши услуги по тюнингу улучшают мощность, крутящий момент и ускорение вашего автомобиля. ",
+	"tuning_performance_description": "Наши услуги по настройке повышают мощность, крутящий момент и ускорение вашего автомобиля. Мы оптимизируем параметры двигателя, чтобы обеспечить максимальную мощность без ущерба для надежности. ",
 	"tuning_customization_title": "Персонализированная настройка",
-	"tuning_customization_description": "У каждого водителя есть уникальные предпочтения. ",
+	"tuning_customization_description": "У каждого водителя есть уникальные предпочтения. Мы настраиваем параметры настройки в соответствии с вашим стилем вождения, будь то городские поездки, дальние поездки или высокопроизводительные гонки. ",
 	"tuning_efficiency_title": "Топливная эффективность",
-	"tuning_efficiency_description": "Экономьте деньги на заправке с помощью нашей настройки, ориентированной на эффективность. ",
-	"custom_part_insertion_intro": "Тюнинг вашего автомобиля – лучший способ сделать его по-настоящему вашим. ",
+	"tuning_efficiency_description": "Экономьте деньги на заправке с нашей настройкой, ориентированной на эффективность. Тонкая настройка систем вашего автомобиля поможет вам добиться лучшей экономии топлива при сохранении производительности. ",
+	"custom_part_insertion_intro": "Настройка вашего автомобиля — это лучший способ сделать его по-настоящему вашим. Наша услуга по установке индивидуальных деталей предлагает бесконечные возможности для улучшения функциональности, эстетики и производительности вашего автомобиля. Хотите ли вы установить новые аудиосистемы, производительные выхлопные системы или специальные интерьеры, у нас есть опыт, чтобы справиться со всем этим. Мы гарантируем идеальную установку каждой детали, которая идеально интегрируется с вашим автомобилем для получения отполированной отделки. Модернизируйте свой автомобиль сегодня с помощью высококачественных индивидуальных деталей, соответствующих вашим потребностям. ",
 	"custom_part_insertion_high_quality_title": "Высочайшее качество",
-	"custom_part_insertion_high_quality_description": "Мы закупаем детали от проверенных производителей, что гарантирует долговечность и надежность. ",
+	"custom_part_insertion_high_quality_description": "Мы закупаем детали у проверенных производителей, чтобы гарантировать долговечность и надежность. Каждый компонент рассчитан на ежедневный износ и обеспечивает долгосрочную ценность. ",
 	"custom_part_insertion_performance_title": "Улучшенная производительность",
 	"custom_part_insertion_performance_description": "Наши специальные детали улучшают общие характеристики вашего автомобиля, делая каждую поездку более приятной: от повышения скорости до повышения эффективности.",
 	"custom_part_insertion_customizable_title": "Полностью настраиваемый",
-	"custom_part_insertion_customizable_description": "Создайте автомобиль своей мечты, используя детали, соответствующие вашим предпочтениям. ",
+	"custom_part_insertion_customizable_description": "Создайте автомобиль своей мечты с деталями, подобранными под ваши особые предпочтения. Будь то роскошный интерьер или передовые технические характеристики, мы сделаем это. ",
 	"overall_checkup_description": "Убедитесь, что ваш автомобиль находится в отличном состоянии, пройдя техосмотр.",
 	"car_painting_description": "Придайте своему автомобилю свежий вид с помощью профессиональных услуг по покраске.",
 	"rust_removal_description": "Удалите ржавчину и защитите свой автомобиль для большей долговечности.",
@@ -469,46 +469,58 @@
 	"additional_info_placeholder": "Введите любую дополнительную информацию о вашем автомобиле или встрече.",
 	"car_repair_description": "Наш автосервис гарантирует, что вашему автомобилю будет оказана профессиональная помощь. ",
 	"pricing_description": "Мы верим в прозрачное и конкурентоспособное ценообразование, чтобы гарантировать, что вы получите лучшее соотношение цены и качества. ",
-	"Password reset link sent": "Password reset link sent",
-	"Reset Password": "Reset Password",
-	"Enter your email": "Enter your email",
-	"Invalid email address": "Invalid email address",
-	"Send Reset Link": "Send Reset Link",
-	"Admin Panel": "Admin Panel",
-	"Filter": "Filter",
-	"All": "All",
-	"Active": "Active",
-	"With Projects": "With Projects",
-	"Admins": "Admins",
-	"Workers": "Workers",
-	"Search by ID, Email, or Project ID": "Search by ID, Email, or Project ID",
-	"Add Worker": "Add Worker",
-	"All Projects": "All Projects",
-	"Delayed": "Delayed",
-	"Finished": "Finished",
-	"Search by Project ID, User ID, Status": "Search by Project ID, User ID, Status",
-	"Projects by Date": "Projects by Date",
-	"Started on this day": "Started on this day",
-	"Finished on this day": "Finished on this day",
-	"Search by Date": "Search by Date",
-	"Search by Project ID, User ID, Username, Status": "Search by Project ID, User ID, Username, Status",
-	"View All Users": "View All Users",
-	"Filter: All Users": "Filter: All Users",
-	"Active Users": "Active Users",
-	"Users With Projects": "Users With Projects",
-	"Search Users": "Search Users",
-	"View All Projects": "View All Projects",
-	"Filter: All Projects": "Filter: All Projects",
-	"Search by Project ID, User ID, Username, or Status": "Search by Project ID, User ID, Username, or Status",
-	"Search Projects": "Search Projects",
-	"Search by ID, Email, or ProjectID": "Search by ID, Email, or ProjectID",
-	"Search by Email, ID or ProjectID": "Search by Email, ID or ProjectID",
-	"Search by ID, Username, or Info": "Search by ID, Username, or Info",
-	"Completed Projects": "Completed Projects",
-	"Pending Projects": "Pending Projects",
-	"Cancelled Projects": "Cancelled Projects",
-	"Successfully removed administrator permissions": "Successfully removed administrator permissions",
-	"Remove Worker": "Remove Worker",
-	"Reason for removal": "Reason for removal",
-	"Remove worker": "Remove worker"
+	"Password reset link sent": "Ссылка сброса пароля отправлена",
+	"Reset Password": "Сбросить пароль",
+	"Enter your email": "Введите свою электронную почту",
+	"Invalid email address": "Неверный адрес электронной почты",
+	"Send Reset Link": "Отправить ссылку на сброс",
+	"Admin Panel": "Панель администратора",
+	"Filter": "Фильтр",
+	"All": "Все",
+	"Active": "Активный",
+	"With Projects": "С проектами",
+	"Admins": "Администраторы",
+	"Workers": "Работники",
+	"Search by ID, Email, or Project ID": "Поиск по идентификатору, электронной почте или идентификатору проекта",
+	"Add Worker": "Добавить работника",
+	"All Projects": "Все проекты",
+	"Delayed": "Отложенный",
+	"Finished": "Законченный",
+	"Search by Project ID, User ID, Status": "Поиск по идентификатору проекта, идентификатор пользователя, статус",
+	"Projects by Date": "Проекты по дате",
+	"Started on this day": "Начался в этот день",
+	"Finished on this day": "Закончил в этот день",
+	"Search by Date": "Поиск по дате",
+	"Search by Project ID, User ID, Username, Status": "Поиск по идентификатору проекта, идентификатор пользователя, имя пользователя, статус",
+	"View All Users": "Просмотреть всех пользователей",
+	"Filter: All Users": "Фильтр: все пользователи",
+	"Active Users": "Активные пользователи",
+	"Users With Projects": "Пользователи с проектами",
+	"Search Users": "Поиск пользователей",
+	"View All Projects": "Посмотреть все проекты",
+	"Filter: All Projects": "Фильтр: все проекты",
+	"Search by Project ID, User ID, Username, or Status": "Поиск по идентификатору проекта, идентификатор пользователя, имени пользователя или статусом",
+	"Search Projects": "Поисковые проекты",
+	"Search by ID, Email, or ProjectID": "Поиск по идентификатору, электронной почте или ProjectId",
+	"Search by Email, ID or ProjectID": "Поиск по электронной почте, ID или ProjectId",
+	"Search by ID, Username, or Info": "Поиск по идентификатору, имени пользователя или информации",
+	"Completed Projects": "Завершены проекты",
+	"Pending Projects": "Ожидающие проекты",
+	"Cancelled Projects": "Отменены проекты",
+	"Successfully removed administrator permissions": "Успешно удаленные разрешения администратора",
+	"Remove Worker": "Удалить работника",
+	"Reason for removal": "Причина удаления",
+	"Remove worker": "Удалить работника",
+	"Search by Email or ID": "Поиск по электронной почте или идентификатору",
+	"Overall Status": "Общий статус",
+	"Project has been cancelled": "Проект был отменен",
+	"(Click to cancel)": "(Нажмите, чтобы отменить)",
+	"Project is finished": "Проект закончен",
+	"Project statistics by type": "Статистика проекта по типу",
+	"Project statistics by status": "Статистика проекта по статусу",
+	"Project count per user": "Количество проектов на пользователя",
+	"Delayed projects": "Задержанные проекты",
+	"No projects found.": "Проектов не найдено.",
+	"Forgot password?": "Забыли пароль?",
+	"Create an account instead?": "Создайте вместо этого учетную запись?"
 }
