Changed estimator to new requirements

--- a/locales/de.json
+++ b/locales/de.json
@@ -522,5 +522,48 @@
 	"Delayed projects": "Verzögerte Projekte",
 	"No projects found.": "Keine Projekte gefunden.",
 	"Forgot password?": "Passwort vergessen?",
-	"Create an account instead?": "Erstellen Sie stattdessen ein Konto?"
+	"Create an account instead?": "Erstellen Sie stattdessen ein Konto?",
+	"Service Breakdown": "Service Breakdown",
+	"Repair Price": "Repair Price",
+	"Material Price": "Material Price",
+	"Total": "Total",
+	"Estimated Rates": "Estimated Rates",
+	"Labor (per hour)": "Labor (per hour)",
+	"Materials flat fee": "Materials flat fee",
+	"Contact us for a detailed quote": "Contact us for a detailed quote",
+	"Repairs Pricing Overview": "Repairs Pricing Overview",
+	"Service": "Service",
+	"Estimated Cost": "Estimated Cost",
+	"Brake System Repairs": "Brake System Repairs",
+	"Suspension Work": "Suspension Work",
+	"Electrical Diagnostics": "Electrical Diagnostics",
+	"Repairs Estimate": "Repairs Estimate",
+	"Paint Job Estimation": "Paint Job Estimation",
+	"Paint job price estimate": "Paint job price estimate",
+	"Rustwork price estimate": "Rustwork price estimate",
+	"Repair job price estimate": "Repair job price estimate",
+	"Paint job prices": "Paint job prices",
+	"Rustwork prices": "Rustwork prices",
+	"Repair job prices": "Repair job prices",
+	"Paint job price calculator": "Paint job price calculator",
+	"Rustwork price calculator": "Rustwork price calculator",
+	"Other service prices": "Other service prices",
+	"Hourly Rate": "Hourly Rate",
+	"Body Labor": "Body Labor",
+	"Paint Labor": "Paint Labor",
+	"Mechanical Work (In-House)": "Mechanical Work (In-House)",
+	"Mechanical Work (Sublet)": "Mechanical Work (Sublet)",
+	"Frame Labor": "Frame Labor",
+	"Aluminum Labor": "Aluminum Labor",
+	"Paint Supplies": "Paint Supplies",
+	"Large Vehicle Service": "Large Vehicle Service",
+	"Exotic Cars": "Exotic Cars",
+	"Mercedes-Benz Service": "Mercedes-Benz Service",
+	"Storage Fee": "Storage Fee",
+	"Welding Estimate": "Welding Estimate",
+	"Estimator description": "Estimator description",
+	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
+	"Rust Work Estimation": "Rust Work Estimation",
+	"Estimator is only an estimate for.": "Estimator is only an estimate for.",
+	"Estimator is only an estimate": "Estimator is only an estimate"
 }
